# booking_service_API

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yaml  test_and_deploy.yaml
app/: main.py  start.sh  tasks.py
app/api/: __init__.py  deps.py
app/api/routers/: __init__.py  auth.py  bookings.py  rooms.py
app/core/: config.py  logger.py  security.py
app/db/: crud.py  redis.py  session.py
app/models/: __init__.py  bookings.py  rooms.py  users.py
app/scripts/: create_admin.py  seed_db.py
migrations/: env.py
migrations/versions/: 3f9341f8a216_.py  d1623971c27b_init.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_rooms.py
