[project]
name = "booking-service"
version = "0.1.0"
description = "Asynchronous booking service API built with FastAPI, SQLModel and Taskiq"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "fastapi-mail>=1.6.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlmodel>=0.0.37",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
seed = "app.scripts.seed_db:seed_data"
create-admin = "app.scripts.create_admin:create_admin"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
exclude = ["migrations"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
